experimental/parser/testdata/parser/import/options.proto.stderr.txt
error: import cannot specify compact options
  --> testdata/parser/import/options.proto:5:20
   |
 5 | import "foo.proto" [(not.allowed) = "here"];
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this

warning: `import weak` is deprecated in "proto2"
  --> testdata/parser/import/options.proto:6:8
   |
 1 | syntax = "proto2";
   |          -------- syntax specified here
...
 5 | import "foo.proto" [(not.allowed) = "here"];
 6 | import weak "weak.proto" [(not.allowed) = "here"];
   |        ^^^^
   = help: deprecated since "proto2", to be removed in Edition 2024
   = help: `import weak` is not implemented correctly in most Protobuf
           implementations

error: import cannot specify compact options
  --> testdata/parser/import/options.proto:6:26
   |
 6 | import weak "weak.proto" [(not.allowed) = "here"];
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this

error: import cannot specify compact options
  --> testdata/parser/import/options.proto:7:30
   |
 7 | import public "public.proto" [(not.allowed) = "here"];
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this

encountered 3 errors and 1 warning
